--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,14 +9,14 @@ body {
   height: 100vh;
   display: grid;
   grid-template-rows: 50px 1fr;
-  grid-template-areas: 
+  grid-template-areas:
     "nav"
-    "main"
+    "main";
 }
 
 body > nav {
   grid-area: nav;
-  background-color: #B8C0C2;
+  background-color: #b8c0c2;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -34,7 +34,7 @@ body > main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #E8ECEB;
+  background-color: #e8eceb;
   padding: 20px;
   overflow-y: scroll;
 }
@@ -94,13 +94,14 @@ table td {
   text-align: center;
 }
 
-#list td:nth-child(2), #list td:nth-child(3){
+#list td:nth-child(2),
+#list td:nth-child(3) {
   min-width: 100px;
 }
 
 #list a {
   border-radius: 4px;
-  background-color: #B8C0C2;
+  background-color: #b8c0c2;
   padding: 4px;
   text-decoration: none;
   font-size: 14px;
@@ -129,13 +130,13 @@ table td {
 }
 
 #add-review-form input[type="submit"],
-#add-performer-form input[type="submit"]  {
+#add-performer-form input[type="submit"] {
   width: 10rem;
   grid-column: 2 / 3;
 }
 
 hr {
-  color: #424748
+  color: #424748;
 }
 
 #badge-container {
@@ -143,17 +144,17 @@ hr {
   flex-wrap: wrap;
   /* padding: 1rem; */
   width: 80%;
-  border: 2px solid #B8C0C2;
-  border-radius: .5rem;
-  margin: .5rem 0 2rem;
+  border: 2px solid #b8c0c2;
+  border-radius: 0.5rem;
+  margin: 0.5rem 0 2rem;
 }
 
 .badge {
-  background-color: #B8C0C2;
-  padding: .5rem;
-  margin: .5rem;
-  border-radius: .3rem;
-  font-size: .8rem;
+  background-color: #b8c0c2;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.3rem;
+  font-size: 0.8rem;
   text-align: center;
 }
 
@@ -162,7 +163,29 @@ hr {
   padding: 0;
   list-style: none;
 }
-  
+
 #show-page li {
   font-weight: bold;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 34px;
+}
+
+.login img {
+  height: 30px;
+}
+
+.review-user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.review-user img {
+  border-radius: 50%;
+  height: 40px;
 }
